--- a/style.css
+++ b/style.css
@@ -235,6 +235,9 @@ body {
 
 .hover-card:hover .hover-info {
     display: block;
+    backdrop-filter: blur(10px); 
+    background-color: rgba(255, 255, 255, 0.2);
+    border-radius: 10px; 
 }
 
 .btn-custom, .btn-ccustom {
